--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 	    <groupId>com.github.nhennigan</groupId>
 	    <artifactId>SE3-Assignment-1</artifactId>
-	    <version>-d4b2002f2b-1</version>
+	    <version>v1.0</version>
 	</dependency>
 	</dependencies>
 	</project>
